--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,2 @@
-[package]
-name = "yuml-rs"
-version = "0.1.0"
-authors = ["mibes <mibes@avaya.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-lazy_static = "1.4"
-regex = "1.5"
-derive_more = "0.99"
-itertools = "0.10"
+[workspace]
+members = ["yuml-rs", "yuml-cli"]
