--- a/yuml-cli/Cargo.toml
+++ b/yuml-cli/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4"
-regex = "1.5"
-derive_more = "0.99"
-itertools = "0.10"
+clap="2"
 
 # local
 yuml-rs = { path = "../yuml-rs" }
