--- a/yuml-cli/Cargo.toml
+++ b/yuml-cli/Cargo.toml
@@ -3,8 +3,13 @@ name = "yuml-cli"
 version = "0.1.0"
 authors = ["mibes <mibes@avaya.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+description = "Rust based yUML parser CLI"
+readme = "README.md"
+documentation = "https://docs.rs/yuml-rs"
+repository = "https://github.com/mibes404/yuml-rs"
+keywords = ["yuml"]
+categories = ["parser"]
 
 [dependencies]
 clap="2"
